Added Header and Nav

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,71 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* Nav Header */
+
+	#nav-main {
+		position: fixed;
+		width: 100%;
+		background: rgba(250, 250, 250, 0.9);
+		z-index: 100;
+	}
+
+		#nav-header .nav-header-container {
+			padding: 1em 4em;
+			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+		}
+
+		#nav-header .nav-header-container ul {
+			list-style: none;
+		}
+
+		#nav-header .nav-header-container ul li {
+			float: left;
+			padding: 0 1em 0 0;
+			font-weight: 500;
+		}
+
+		#nav-header .nav-header-container ul li:not(:first-child) {
+			border-left: solid 1px;
+			padding: 0 1em;
+		}
+
+		#nav-header .nav-header-container ul li a {
+			text-decoration: none;
+			padding: 0.5em 0;
+			cursor: pointer;
+		}
+
+		#nav-header .nav-header-container ul li a img {
+			width: 20px;
+			margin-right: 0.5em;
+		}
+	
+	#nav-projects {
+		display: none;
+		z-index: 1;
+		box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.10);
+	}
+
+	#nav-projects .gallery {
+		height: 330px;
+	}
+
+	#nav-projects .gallery a {
+		text-decoration: none;
+	}
+
+	#nav-projects .gallery article .image {
+		background-color: rgba(255,255,255,0);
+	}
+
+	#nav-projects .gallery p {
+		padding: 0.5em;
+		font-weight: 500;
+		color: rgba(0,0,0,1);
+		text-align: center;
+	}
+
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
