--- a/assets/sass/components/_gallery.scss
+++ b/assets/sass/components/_gallery.scss
@@ -553,12 +553,21 @@
 					'transform #{_duration(gallery-lightbox) * 0.5} ease'
 				));
 				opacity: 0;
+				position: relative;
 
 				img {
 					display: block;
 					max-width: 90vw;
 					max-height: 85vh;
 					box-shadow: 0 1rem 3rem 0 rgba(0, 0, 0, 0.35);
+				}
+
+				.caption {
+                  	display: block;
+					max-width: 90vw;
+                  	text-align: center;
+                  	margin: 0 auto;
+					padding: 0 2rem;
 				}
 			}
 
