--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -173,6 +173,7 @@
 	@import 'components/wrapper';
 	@import 'components/items';
 	@import 'components/index';
+    @import 'components/nav-header';
 
 // Layout.
 
