--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -14,6 +14,7 @@
 	// MSIE: Prevents scrollbar from overlapping content.
 		body {
 			-ms-overflow-style: scrollbar;
+			position: relative;
 		}
 
 	// Ensures page width is always >=320px.
@@ -35,4 +36,8 @@
 				}
 			}
 
+	}
+
+	.scroller_content--disabled {
+		overflow: hidden;
 	}
